Fix static build using native styles

Ensure that the qml registration function of macOS, Windows and native
styles get linked and executed in static builds by referencing the
initialization function in the plugin constructor.
This is intrusive and ugly, but is the method currently used in other
plugins.

Fixes: QTBUG-88463
Change-Id: I1b41ec89116066f46818f40ad155d12f6e719ca7
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>